fix about image overflowing parent div

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ header.masthead>.overlay {
   display: flex;
   width: 100%;
   height: 30%;
-  display: inline-block;
+  /* display: inline-block; */
   height: fit-content;
   
 }
@@ -62,7 +62,7 @@ header.masthead>.overlay {
 #about img {
   margin-left: 1em;
   float: right;
-  width: 40%;
+  /* width: 40%; */
   max-height: 400px;
   max-width: 400px;
 }
@@ -125,6 +125,11 @@ header.masthead>.overlay {
 
   .social-content h1 {
     font-size: 2em;
+  }
+
+  .circular--landscape {
+    height: 300px;
+    width: 300px;
   }
 }
 /* END MOBILE STYLING */
